program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -9335,9 +9335,9 @@ msgid "Nu&mber of entries to create:"
 msgstr "No&mbre d'entrées à créer :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2140
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "&Nombre d'entrées à renuméroter :"
+msgstr "Nombre d'entrées &récemment utilisées à mémoriser :"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
@@ -13625,7 +13625,7 @@ msgstr "Ce fichier Ogg/OGM contient des chapitres mais ils ne peuvent pas être 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:278
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr ""
+msgstr "Ceci affecte les fonctions telles que le sélecteur de dossiers de destination récemment utilisés dans le multiplexeur"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:376
 #, no-c-format
