program translations: update Bulgarian

--- a/po/bg.po
+++ b/po/bg.po
@@ -4746,7 +4746,7 @@ msgstr "Коефициенти на цветова матрица"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, no-c-format
 msgid "Color matrix coefficients:"
-msgstr "Цветова матрица (коефициенти):"
+msgstr "Цветова матрица (коеф.):"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
@@ -7465,7 +7465,7 @@ msgstr "Ако искаш да разшириш съществуващ файл 
 #: src/output/p_textsubs.cpp:140
 #, no-c-format
 msgid "Ignoring an entry which starts after it ends ({0}).\n"
-msgstr ""
+msgstr "Игнориране на запис, който започва след като свършва ({0}).\n"
 
 #: src/input/subtitles.cpp:579
 #, no-c-format
@@ -9193,9 +9193,9 @@ msgid "Nu&mber of entries to create:"
 msgstr "&Колко епизода да се създадат:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2140
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "&Колко епизода да се преномерират:"
+msgstr "Брой на &скорошни директории за запомняне:"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
@@ -9607,7 +9607,7 @@ msgstr "В очакване на ръчно стартиране"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2229
 #, no-c-format
 msgid "Pitch rotation:"
-msgstr ""
+msgstr "Завъртане по тангаж:"
 
 #: src/common/kax_element_names.cpp:154
 #, no-c-format
@@ -9913,17 +9913,17 @@ msgstr "Прогрес: {0}%{1}"
 #: src/common/kax_element_names.cpp:140
 #, no-c-format
 msgid "Projection type"
-msgstr ""
+msgstr "Тип на проекцията"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2228
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection type:"
-msgstr "Съотношение на страните – тип"
+msgstr "Тип на проекцията:"
 
 #: src/common/kax_element_names.cpp:143
 #, no-c-format
 msgid "Projection's pitch rotation"
-msgstr ""
+msgstr "Завъртане по тангаж на проекцията"
 
 #: src/common/kax_element_names.cpp:141
 #, no-c-format
@@ -9933,17 +9933,17 @@ msgstr ""
 #: src/common/kax_element_names.cpp:144
 #, no-c-format
 msgid "Projection's roll rotation"
-msgstr ""
+msgstr "Завъртане по крен на проекцията"
 
 #: src/common/kax_element_names.cpp:142
 #, no-c-format
 msgid "Projection's yaw rotation"
-msgstr ""
+msgstr "Плъзгащо завъртане на проекцията"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection-specific data:"
-msgstr "Видео: специфични за проекцията данни"
+msgstr "Специфични данни:"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:170
 #: src/mkvtoolnix-gui/merge/track_model.cpp:86
@@ -10457,9 +10457,9 @@ msgid "Right-click to add, append and remove files"
 msgstr "Цъкни с десен бутон за да добавиш, разшириш или премахнеш файлове"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2232
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Roll rotation:"
-msgstr "Продължителност:"
+msgstr "Завъртане по крен:"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:270
 #, no-c-format
@@ -11277,17 +11277,17 @@ msgstr "Директория на файла-източник"
 #: src/common/property_element.cpp:204
 #, no-c-format
 msgid "Specifies a pitch rotation to the projection."
-msgstr "Задава завъртане на стъпката към прожекцията."
+msgstr "Задава завъртане по тангаж (pitch rotation) към проекцията."
 
 #: src/common/property_element.cpp:205
 #, no-c-format
 msgid "Specifies a roll rotation to the projection."
-msgstr "Задава завъртане на наклона към прожекцията."
+msgstr "Задава завъртане по крен (roll rotation) към проекцията."
 
 #: src/common/property_element.cpp:203
 #, no-c-format
 msgid "Specifies a yaw rotation to the projection."
-msgstr "Задава завъртане на отклонението към прожекцията."
+msgstr "Задава плъзгащо завъртане (yaw rotation) към проекцията."
 
 #: src/common/property_element.cpp:147
 #, no-c-format
@@ -13458,7 +13458,7 @@ msgstr ""
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:278
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr ""
+msgstr "Колко на брой скорошни записа (entries) да се запазват. Това оказва влияние върху функционалности като например селектора за скорошно използвани целеви директории в мултиплексъра."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:376
 #, no-c-format
@@ -14539,14 +14539,14 @@ msgstr ""
 #: src/common/kax_element_names.cpp:139
 #, no-c-format
 msgid "Video projection"
-msgstr ""
+msgstr "Проекция на видеото"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2176
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2227
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:629
 #, no-c-format
 msgid "Video projection information"
-msgstr ""
+msgstr "Информация за проекция на видеото"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2173
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2203
@@ -14657,22 +14657,22 @@ msgstr "Видео: минимална осветеност"
 #: src/common/property_element.cpp:201
 #, no-c-format
 msgid "Video: projection type"
-msgstr ""
+msgstr "Видео: тип на проекцията"
 
 #: src/common/property_element.cpp:204
 #, no-c-format
 msgid "Video: projection's pitch rotation"
-msgstr ""
+msgstr "Видео: завъртане по тангаж на проекцията (pitch rotation)"
 
 #: src/common/property_element.cpp:205
 #, no-c-format
 msgid "Video: projection's roll rotation"
-msgstr ""
+msgstr "Видео: завъртане по крен не проекцията (roll rotation)"
 
 #: src/common/property_element.cpp:203
 #, no-c-format
 msgid "Video: projection's yaw rotation"
-msgstr ""
+msgstr "Видео: плъзгащо завъртане на проекцията (yaw rotation)"
 
 #: src/common/property_element.cpp:202
 #, no-c-format
@@ -15094,9 +15094,9 @@ msgid "Xiph lacing"
 msgstr "Xiph lacing"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2230
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Yaw rotation:"
-msgstr "Продължителност:"
+msgstr "Плъзгащо завъртане:"
 
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:30
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:43
