program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -13699,7 +13699,7 @@ msgstr "Este archivo Ogg/OGM contiene chapters pero no pueden ser analizados. Pu
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:278
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr ""
+msgstr "Afecta a funciones como la del selector de directorios de destino de usados recientemente en el multiplexador."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:376
 #, no-c-format
