program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -13642,7 +13642,7 @@ msgstr "Questo file OGG/OGM contiene capitoli che non possono essere analizzati.
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:278
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr ""
+msgstr "Ciò influisce su funzioni come il selettore delle cartelle destinazione usate di recente nel multiplexer."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:376
 #, no-c-format
