program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -13573,7 +13573,7 @@ msgstr "Bu Ogg/OGM dosyası bölümler içeriyor, ancak ayrıştırılamadı. Bu
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:278
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr ""
+msgstr "Bu, çoklayıcıda son kullanılan hedef dizinlerin seçicisi gibi işlevleri etkiler."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:376
 #, no-c-format
