program translations: update Chinese Simplified (Singapore)

--- a/po/zh_SG.po
+++ b/po/zh_SG.po
@@ -5581,7 +5581,7 @@ msgstr "描述:"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2233
 #, no-c-format
 msgid "Destination directory"
-msgstr "目标目录"
+msgstr "输出目录"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2300
 #, no-c-format
@@ -13493,7 +13493,7 @@ msgstr "该 Ogg/OGM 文件包含章节但无法解析。这可能是由于没有
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:278
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr ""
+msgstr "这会影响到例如混流器的 ｢最近使用的输出目录｣ 选择按钮等功能。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:376
 #, no-c-format
