program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -1867,9 +1867,9 @@ msgid "&Copy command line to clipboard"
 msgstr "&Copia la línia d'ordres al porta-retalls"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Create a new multiplex settings tab for each directory"
-msgstr "Crea una nova pestanya d'ajustaments de multiplexat per a cada fitxer"
+msgstr "&Crea una pestanya nova d'ajustaments de multiplexat  per a cada directori"
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:508
 #, no-c-format
@@ -2005,7 +2005,7 @@ msgstr "&Genera els subcapítols"
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:138
 #, no-c-format
 msgid "&Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "&Gestiona tots els fitxers de tots els directoris com a una llista única de fitxers"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:672
 #, no-c-format
@@ -3502,9 +3502,9 @@ msgstr "Afegeix fitxers de capítols"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:135
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:136
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Adding directories via drag & drop or copy & paste"
-msgstr "Afegeix-los mitjançant arrossega i deixa o copia i enganxa"
+msgstr "S'estan afegint els directoris mitjançant arrossega i desa o còpia i enganxa"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2199
 #, no-c-format
@@ -5200,9 +5200,9 @@ msgid "Create a WebM compliant file."
 msgstr "Crea un fitxer conforme amb WebM."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:797
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Create a new multiplex settings tab for each directory"
-msgstr "Crea una nova pestanya d'ajustaments de multiplexat per a cada fitxer"
+msgstr "Crea una pestanya nova d'ajustaments de multiplexat per a cada directori"
 
 #: src/mkvtoolnix-gui/forms/merge/tool.h:224
 #, no-c-format
@@ -5232,12 +5232,12 @@ msgstr "Crea uns ajustaments nous"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:777
 #, no-c-format
 msgid "Create one new multiplex settings tab and add all files there"
-msgstr "Crea una nova pestanya d'ajustaments de multiplexat i afegeix-hi tots els fitxers"
+msgstr "Crea una pestanya nova d'ajustaments de multiplexat i afegeix-hi tots els fitxers"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:778
 #, no-c-format
 msgid "Create one new multiplex settings tab for each file"
-msgstr "Crea una nova pestanya d'ajustaments de multiplexat per a cada fitxer"
+msgstr "Crea una pestanya nova d'ajustaments de multiplexat per a cada fitxer"
 
 #: src/common/mm_io_x.h:117
 #, no-c-format
@@ -6909,7 +6909,7 @@ msgstr "Per a una explicació més extensa de la vinculació de fitxers/segments
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:49
 #, no-c-format
 msgid "For each directory a new multiplex settings tab can be created. All files from that directory will be added to this new tab. The configuration about dragging & dropping/copying & pasting files is ignored in this case."
-msgstr ""
+msgstr "Per a cada directori es pot crear una pestanya nova d'ajustaments de multiplexat. Tots els fitxers d’aquest directori s’afegiran a aquesta pestanya nova. En aquest cas, la configuració sobre arrossegar i deixar/copiar i enganxar fitxers."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:385
 #, no-c-format
@@ -7175,7 +7175,7 @@ msgstr "Fluxos elementals d'HEVC/H.265"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:796
 #, no-c-format
 msgid "Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "Gestiona tots els fitxers de tots els directoris com a una llista única de fitxers"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:444
 #, no-c-format
@@ -13110,7 +13110,7 @@ msgstr "El procés serà cancel·lat."
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:48
 #, no-c-format
 msgid "The program can collect all files from all directories in a single list. What happens with that list is determined by how dragging & dropping/copying & pasting files is configured."
-msgstr ""
+msgstr "El programa pot recopilar tots els fitxers de tots els directoris en una sola llista. El que passa amb aquesta llista és determinat per la configuració sobre arrossegar i deixar/copiar i enganxar fitxers."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:295
 #, no-c-format
@@ -13692,7 +13692,7 @@ msgstr "Aquest fitxer Ogg/OGM conté capítols, però no es poden analitzar. Es 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:280
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr ""
+msgstr "Això afecta les funcions com el selector de directoris de destinació emprats recentment en el multiplexat."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:378
 #, no-c-format
@@ -15108,9 +15108,9 @@ msgid "When a file is added its name is scanned."
 msgstr "Quan s'afegeix un fitxer el seu nom és escanejat."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2202
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When adding d&irectories via drag && drop/copy && paste:"
-msgstr "Quan afegir fitxers mitjançant arrossega i deixa o copia i enganxa:"
+msgstr "Quan s'afegeixen directoris mitjançant arrossegar i deixar/copiar i enganxar:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2200
 #, no-c-format
@@ -15158,9 +15158,9 @@ msgid "When the user adds such a file the track's language input is set to the l
 msgstr "Quan l'usuari afegeix un fitxer, l'idioma de la pista d'entrada s'establirà a la propietat de l'idioma del fitxer d'origen."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:441
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When the user drags & drops directories from an external application onto the multiplex tool the GUI can take different actions."
-msgstr "Quan l'usuari arrossega i deixa els fitxers des d'una aplicació externa sobre l'eina de multiplexat, la IGU pot prendre diferents accions."
+msgstr "Quan l'usuari arrossega i deixa els directoris des d'una aplicació externa a l'eina de multiplexat, la IGU pot fer accions diferents."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:565
 #, no-c-format
@@ -15472,7 +15472,7 @@ msgstr "Heu de seleccionar un fitxer existent."
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:137
 #, no-c-format
 msgid "You've dragged & dropped or copied & pasted at least one directory. There are several ways to handle them:"
-msgstr ""
+msgstr "Heu arrossegat i deixat/copiat i enganxat almenys un directori. Hi ha diverses maneres de gestionar-ho:"
 
 #: src/common/compression/zlib.cpp:52
 #: src/common/compression/zlib.cpp:90
