program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -13737,7 +13737,7 @@ msgstr "Este archivo Ogg/OGM contiene chapters pero no pueden ser analizados. Pu
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:280
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr "Afecta a funciones como la del selector de directorios de destino de usados recientemente en el multiplexador."
+msgstr "Afecta a funciones como a la del selector de directorios de destino usados recientemente en el multiplexador."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:378
 #, no-c-format
