program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -1795,9 +1795,9 @@ msgid "&Copy command line to clipboard"
 msgstr "Komut satırını panoya &kopyala"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Create a new multiplex settings tab for each directory"
-msgstr "Her dosya için bir yeni çoklama ayarları sekmesi oluştur"
+msgstr "Her dizin için yeni bir çoklama ayarları sekmesi &oluştur"
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:508
 #, no-c-format
@@ -1933,7 +1933,7 @@ msgstr "Alt bölümleri &oluştur"
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:138
 #, no-c-format
 msgid "&Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "Tüm dizinlerdeki tüm dosyaları tek bir dosya listesi olarak &işle"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:672
 #, no-c-format
@@ -3430,9 +3430,9 @@ msgstr "Bölüm dosyaları ekleniyor"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:135
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:136
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Adding directories via drag & drop or copy & paste"
-msgstr "Sürükle ve bırak ya da kopyala ve yapıştır aracılığıyla dosyalar ekleniyor"
+msgstr "Sürükle ve bırak ya da kopyala ve yapıştır aracılığıyla dizinler ekleniyor"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2199
 #, no-c-format
@@ -5127,9 +5127,9 @@ msgid "Create a WebM compliant file."
 msgstr "WebM uyumlu dosya oluşturur."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:797
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Create a new multiplex settings tab for each directory"
-msgstr "Her dosya için bir yeni çoklama ayarları sekmesi oluştur"
+msgstr "Her dizin için yeni bir çoklama ayarları sekmesi oluştur"
 
 #: src/mkvtoolnix-gui/forms/merge/tool.h:224
 #, no-c-format
@@ -6834,7 +6834,7 @@ msgstr "Dosya/parça bağlamasının geniş kapsamlı açıklaması ve bu özell
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:49
 #, no-c-format
 msgid "For each directory a new multiplex settings tab can be created. All files from that directory will be added to this new tab. The configuration about dragging & dropping/copying & pasting files is ignored in this case."
-msgstr ""
+msgstr "Her dizin için yeni bir çoklama ayarları sekmesi oluşturulabilir. Bu dizindeki tüm dosyalar bu yeni sekmeye eklenecektir. Dosyaları sürüklemek ve bırakmak/kopyalamak ve yapıştırmak ile ilgili yapılandırma bu durumda yok sayılır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:385
 #, no-c-format
@@ -7100,7 +7100,7 @@ msgstr "HEVC/H.265 temel akışları"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:796
 #, no-c-format
 msgid "Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "Tüm dizinlerdeki tüm dosyaları tek bir dosya listesi olarak işle"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:444
 #, no-c-format
