--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (70.0.0-0~bunkus01) jammy; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 14 Aug 2022 09:20:02 +0200
+
 mkvtoolnix (69.0.0-0~bunkus01) jammy; urgency=low
 
   * New version.
