AUTHORS: add Grzegorz Pruchniakowski

--- a/AUTHORS
+++ b/AUTHORS
@@ -99,6 +99,9 @@ Giuseppe De Robertis <giuseppe.derobertis@ba.infn.it>
     * Option --fix-bitstream-timing-information & implementation for
       AVC/H.264
 
+Grzegorz Pruchniakowski <gootector@o2.pl>
+    * Polish translation
+
 Hiroki Taniura <boiled.sugar@gmail.com>
     * Japanese translation
 
