AUTHORS: don't distinguish between translation programs & documentation

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,7 +21,6 @@ Andriy Bilous'ko <arestarh@ukr.net>
 
 Antoni Bella Pérez <antonibella5@yahoo.com>
     * Catalan translation
-    * Catalan man page translation
 
 Aurelien Jacobs <aurel@gnuage.org>
     * Support for RealAudio v3 in RealMedia files
@@ -40,17 +39,16 @@ Chao Chen <tochenchao@gmail.com>
     * Support for Apple ProRes video
 
 Chris Leick <c.leick@vollbio.de>
-    * Parts of the German translation for the programs
-    * German man page translation
+    * German translation
 
 Damiano Galassi <damiog@gmail.com>
     * Bugfix for timecodes in MP4 files with edit lists and B frames
 
 Daniel <danny3@tutanota.com>
-    * Romanian translation of the programs
+    * Romanian translation
 
 Daniel Kluz <sir.daniel.k@gmail.com>
-    * Polish translation of the programs and the man pages
+    * Polish translation
 
 Danko <badyu17@gmail.com>
     * Serbian (Latin) translation
@@ -112,14 +110,14 @@ Ioma Taani <?>
     * Italian translation
 
 Israel Lucas Torrijos <lukillas.ole@gmail.com>
-    * Spanish translation of the programs and man pages
+    * Spanish translation
 
 James Almer <jamrial@gmail.com>
     * Support for "field order" element in mkvinfo
     * Support for skipping APE(v2) tags in TTA files
 
 Jan Mazurczyk <remuxer32@protonmail.com>
-    * Polish translation of the programs, the man pages and installer entries
+    * Polish translation
     * MKVToolNix collaborator: editing the Wiki entries, proposing new
       ideas/improvements to the project, testing the software,
       reporting bugs, providing materials (e.g. important sample
@@ -148,10 +146,10 @@ Kai Mao <chunkai.mao@gmail.com>
     * Chinese Traditional translation
 
 Katsuhiko Nishimra <kat841@hotmail.com>
-    * Japanese translation for the man pages
+    * Japanese translation
 
 Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>
-    * Swedish translation for the programs
+    * Swedish translation
 
 Larsen Louis <saytolive@live.cn>
     * Chinese Simplified translation
@@ -203,7 +201,7 @@ Moritz Bunkus <moritz@bunkus.org>
     * Almost everything
     * Most of the code, the build system
     * All of the English documentation
-    * German translation for the applications
+    * German translation
 
 Nicholai Main <goyuken@gmail.com>
     * H.264 width/height calculation fix for pixel formats other than
@@ -233,7 +231,7 @@ Pavel Rehak <pavel-rehak@email.cz>
     * Czech translation
 
 Potato <sheppaul@naver.com>
-    * Korean translation of the programs and the man pages
+    * Korean translation
 
 pp Carvalho <?>
     * Brazilian Portuguese translation
@@ -252,13 +250,13 @@ rctgamer3 <rctgamer3+transifex@hotmail.com>
     * Dutch translation of programs
 
 René Maassen <bmom43@hotmail.com>
-    * Dutch translation of programs and man pages
+    * Dutch translation
 
 Ricardo Perdigão <ricardofonseca1977@gmail.com>
     * Portuguese translation
 
 Robert Buj <rbuj@fedoraproject.org>
-    * Catalan translations of the man programs and the man pages
+    * Catalan translation
 
 Robert Millan <rmh@aybabtu.com>
     * MIME type recognition via libmagic
@@ -281,7 +279,7 @@ Sergi Medina <nousernameremain@gmail.com>
     * Spanish translation
 
 Serj <rusguy6@gmail.com>
-    * Russian and Ukrainian translations for the programs
+    * Russian and Ukrainian translation
     * Improvements to the Windows installer
 
 Shailesh L Mistry <shailesh.mistry@milan.eclipse.co.uk>
@@ -374,7 +372,7 @@ Yuqiu Wang <frankwaiichou@126.com>
     * Russian translation
 
 無情天 X <kofzhanganguo@126.com>
-    * Chinese Simplified translation of the man pages
+    * Chinese Simplified translation
 
 ? <ogg.k.ogg.k@googlemail.com>
     * Support for Ogg Kate in mkvmerge and mkvextract
