--- a/doc/man/po4a/po/zh_TW.po
+++ b/doc/man/po4a/po/zh_TW.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-07-09 10:51+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: Dian Li <xslidian@gmail.com>, 2009-2012,2022\n"
+"Last-Translator: HULEN, 2022\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_TW/)\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
@@ -37,10 +37,8 @@ msgstr "70.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-03-13"
 msgid "2022-05-22"
-msgstr "2022-03-13"
+msgstr "2022-05-22"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1777,10 +1775,8 @@ msgstr "模板中可以使用多个变量，这些变量将在生成章节时被
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:311
-#, fuzzy
-#| msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name wihtout respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
 msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name without respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
-msgstr "字符串“<literal>&lt;FILE_NAME&gt;</literal>”与“<literal>&lt;FILE_NAME_WITH_EXT&gt;</literal>” 仅在为追加文件生成章节时被填充。它们会被替换为追加文件的名称，分别省略扩展名、包含扩展名。注意只会插入文件的基本名称与扩展名，不包括其目录或盘符。"
+msgstr "字串 ｢<literal>&lt;FILE_NAME&gt;</literal>｣ 與 ｢<literal>'&lt;FILE_NAME_WITH_EXT&gt;</literal>｣ 只會在為追加檔案產生章節時進行填充。 它們會被取代為追加檔案的檔名，前者不含副檔名，後者包含副檔名。 注意，只會插入檔案本身的名稱 (及副檔名)，不會插入其目錄名稱或磁碟機代號。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:317
@@ -3481,10 +3477,8 @@ msgstr "<literal>json</literal> 格式输出机器可读的 JSON 表达式。此
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2147
-#, fuzzy
-#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v14.json\"><literal>mkvmerge-identification-output-schema-v14.json</literal></ulink>"
 msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
-msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v14.json\"><literal>mkvmerge-identification-output-schema-v14.json</literal></ulink>"
+msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2151
