program translations: update Bulgarian

--- a/po/bg.po
+++ b/po/bg.po
@@ -1680,9 +1680,9 @@ msgid "&Copy command line to clipboard"
 msgstr "&Копиране на командния ред в клипборда"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Create a new multiplex settings tab for each directory"
-msgstr "Създай нов раздел с мултиплекс настройки за всеки файл"
+msgstr "Създай &нов раздел с мултиплекс настройки за всяка директория"
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:508
 #, no-c-format
@@ -1818,7 +1818,7 @@ msgstr "&Генерирай подепизоди"
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:138
 #, no-c-format
 msgid "&Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "Сложи &всички файлове от директориите в единичен списък"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:672
 #, no-c-format
@@ -3317,9 +3317,9 @@ msgstr "Добавяне на файлове с епизоди"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:135
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:136
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Adding directories via drag & drop or copy & paste"
-msgstr "Добавяне на файлове чрез довлачване или копиране и поставяне"
+msgstr "Добавяне на директории чрез довлачване или поставяне"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2199
 #, no-c-format
@@ -3330,7 +3330,7 @@ msgstr "Добавяне на няколко файла"
 #: src/mkvtoolnix-gui/forms/merge/adding_appending_files_dialog.h:166
 #, no-c-format
 msgid "Adding files via drag & drop or copy & paste"
-msgstr "Добавяне на файлове чрез довлачване или копиране и поставяне"
+msgstr "Добавяне на файлове чрез довлачване или поставяне"
 
 #: src/mkvtoolnix-gui/merge/adding_appending_files_dialog.cpp:28
 #: src/mkvtoolnix-gui/merge/adding_appending_files_dialog.cpp:29
@@ -5014,9 +5014,9 @@ msgid "Create a WebM compliant file."
 msgstr "Създай съвместим с WebM стандарта файл."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:797
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Create a new multiplex settings tab for each directory"
-msgstr "Създай нов раздел с мултиплекс настройки за всеки файл"
+msgstr "Създай нов раздел с мултиплекс настройки за всяка директория"
 
 #: src/mkvtoolnix-gui/forms/merge/tool.h:224
 #, no-c-format
@@ -6721,7 +6721,7 @@ msgstr "За по-задълбочено обяснение за това как
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:49
 #, no-c-format
 msgid "For each directory a new multiplex settings tab can be created. All files from that directory will be added to this new tab. The configuration about dragging & dropping/copying & pasting files is ignored in this case."
-msgstr ""
+msgstr "За всяка директория да бъде създаден нов раздел с мултиплекс настройки. Всички файлове от тази директория ще бъдат добавени към този раздел. Конфигурацията за довлачване/поставяне на файлове бива пренебрегната в този случай."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:385
 #, no-c-format
@@ -6987,7 +6987,7 @@ msgstr "HEVC/H.265 елементарни потоци"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:796
 #, no-c-format
 msgid "Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "Сложи всички файлове от директориите в единичен списък"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:444
 #, no-c-format
@@ -12917,7 +12917,7 @@ msgstr "Процесът ще бъде прекратен."
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:48
 #, no-c-format
 msgid "The program can collect all files from all directories in a single list. What happens with that list is determined by how dragging & dropping/copying & pasting files is configured."
-msgstr ""
+msgstr "Програмата може да събере всички файлове от всички директории в един списък. Какво се случва с този списък зависи от това как е конфигурирано довлачването/поставянето на файлове."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:295
 #, no-c-format
@@ -14912,9 +14912,9 @@ msgid "When a file is added its name is scanned."
 msgstr "Когато се добавя файл, името му се сканира."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2202
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When adding d&irectories via drag && drop/copy && paste:"
-msgstr "При до&влачване или поставяне на файлове:"
+msgstr "При добавяне на &директории чрез довлачване/поставяне:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2200
 #, no-c-format
@@ -14962,9 +14962,9 @@ msgid "When the user adds such a file the track's language input is set to the l
 msgstr "Когато потребителят добави такъв файл, езикът на пътечката заема стойността на свойството „език“ от файла-източник."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:441
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When the user drags & drops directories from an external application onto the multiplex tool the GUI can take different actions."
-msgstr "Когато потребителят довлече файлове от външно приложение в мултипрексор инструмента, могат да бъдат предприети различни действия."
+msgstr "Когато потребителят довлачи директории от външно приложение в мултиплексора, програмата може да предприеме различни действия."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:565
 #, no-c-format
@@ -15276,7 +15276,7 @@ msgstr "Трябва да избереш съществуващ файл."
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:137
 #, no-c-format
 msgid "You've dragged & dropped or copied & pasted at least one directory. There are several ways to handle them:"
-msgstr ""
+msgstr "Току-що довлачихте или поставихте поне една директория. Може да процедираме по един от следните начини:"
 
 #: src/common/compression/zlib.cpp:52
 #: src/common/compression/zlib.cpp:90
